[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-collector-service"
version = "1.0.0"
description = "Production-ready Edge Collector Service: OPC UA to RabbitMQ bridge for IIoT telemetry"
requires-python = ">=3.12,<3.13"
dependencies = [
    "asyncua>=1.1.5,<2.0.0",
    "aio-pika>=9.4,<10.0.0",
    "aiosqlite>=0.22,<0.23.0",
    "httpx>=0.28,<0.29.0",
    "pydantic>=2.10,<3.0.0",
    "pydantic-settings>=2.7,<3.0.0",
    "structlog>=24.4,<25.0.0",
    "aiohttp>=3.11,<4.0.0",
    "cryptography>=46.0.5,<47.0.0",
    "protobuf>=6.33.6,<7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "grpcio-tools>=1.78.0,<2.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # asyncua uses deprecated asyncio.iscoroutinefunction
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:asyncua",
]
